test_regress/t/t_array_method.out
%Error-UNSUPPORTED: t/t_array_method.v:26:14: Unsupported: with statements
   26 |       q.sort with (item == 2);
      |              ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:28:17: Unsupported: with statements
   28 |       q.sort(x) with (x == 3);
      |                 ^~~~
%Error: t/t_array_method.v:28:14: Can't find definition of variable: 'x'
   28 |       q.sort(x) with (x == 3);
      |              ^
%Error-UNSUPPORTED: t/t_array_method.v:30:18: Unsupported: with statements
   30 |       qe.sort(x) with (x == 3);
      |                  ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:35:15: Unsupported: with statements
   35 |       q.rsort with (item == 2);
      |               ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:37:19: Unsupported: with statements
   37 |       qe.rsort(x) with (x == 3);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:57:19: Unsupported: with statements
   57 |       qv = q.find with (item == 2);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:59:25: Unsupported: with statements
   59 |       qv = q.find_index with (item == 2); qv.sort;
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:61:25: Unsupported: with statements
   61 |       qv = q.find_first with (item == 2);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:63:31: Unsupported: with statements
   63 |       qv = q.find_first_index with (item == 2);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:65:24: Unsupported: with statements
   65 |       qv = q.find_last with (item == 2);
      |                        ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:67:30: Unsupported: with statements
   67 |       qv = q.find_last_index with (item == 2);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:70:19: Unsupported: with statements
   70 |       qv = q.find with (item == 20);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:72:25: Unsupported: with statements
   72 |       qv = q.find_index with (item == 20); qv.sort;
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:74:25: Unsupported: with statements
   74 |       qv = q.find_first with (item == 20);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:76:31: Unsupported: with statements
   76 |       qv = q.find_first_index with (item == 20);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:78:24: Unsupported: with statements
   78 |       qv = q.find_last with (item == 20);
      |                        ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:80:30: Unsupported: with statements
   80 |       qv = q.find_last_index with (item == 20);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:96:17: Unsupported: with statements
   96 |       i = q.sum with (item + 1); do if ((i) !== (32'h11)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",96, (i), (32'h11)); $stop; end while(0);;
      |                 ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:98:21: Unsupported: with statements
   98 |       i = q.product with (item + 1); do if ((i) !== (32'h168)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",98, (i), (32'h168)); $stop; end while(0);;
      |                     ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:105:17: Unsupported: with statements
  105 |       i = q.and with (item + 1); do if ((i) !== (32'b1001)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",105, (i), (32'b1001)); $stop; end while(0);;
      |                 ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:107:16: Unsupported: with statements
  107 |       i = q.or with (item + 1); do if ((i) !== (32'b1111)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",107, (i), (32'b1111)); $stop; end while(0);;
      |                ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:109:17: Unsupported: with statements
  109 |       i = q.xor with (item + 1); do if ((i) !== (32'hb)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",109, (i), (32'hb)); $stop; end while(0);;
      |                 ^~~~
%Error: Exiting due to
